<resources>
    <string name="app_name">Note</string>
    <string-array name="priority_array">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
    <string name="tv_add_edit_title">Title:</string>
    <string name="et_add_edit_title_hint">Enter the title</string>
    <string name="tv_add_edit_priority_level">Priority_level</string>
    <string name="tv_add_edit_content">Content:</string>
    <string name="et_add_edit_content_hint">Enter the content</string>
    <string name="action_save_title">Save</string>
    <string name="action_delete_title">Delete</string>
    <string name="action_search_title">Search</string>
    <string name="collapsing_sort_by_title">Sort by</string>
    <string name="collapsing_show_title">Show</string>
    <string name="action_low_only_title">Low only</string>
    <string name="action_medium_only_title">Medium only</string>
    <string name="action_high_only_title">High only</string>
    <string name="action_all_title">All</string>
    <string name="action_newest_title">Newest</string>
    <string name="action_oldest_title">Oldest</string>
    <string name="action_low_level_title">Low level</string>
    <string name="action_high_level_title">High level</string>
    <string name="toolbar_title_add">Add</string>
    <string name="toolbar_title_edit">Edit</string>
    <string name="toolbar_title_notes">Notes</string>
    <string name="alert_add_note_title">New note</string>
    <string name="alert_add_note_message">Add new note?</string>
    <string name="alert_add_note_positive">Add</string>
    <string name="alert_edit_note_title">Edit note</string>
    <string name="alert_edit_note_message">Are you sure you want to edit this note?</string>
    <string name="alert_edit_note_positive">Edit</string>
    <string name="alert_delete_note_title">Delete note</string>
    <string name="alert_delete_note_message">Are you sure you want to delete this note?</string>
    <string name="alert_delete_note_positive">Delete</string>
    <string name="alert_cancel">Cancel</string>
    <string name="et_error_empty">empty</string>
    <string name="date_format">MMMM dd  yyyy</string>
    <string name="search_query_hint">Search…</string>
</resources>